# fullstack-python-app

./: .gitignore  README.md  Taskfile.yml  compose.yaml  pyproject.toml
collections/: Python_GUI_API.postman_collection.json
src/: main.py  pyside_setup.py
src/api/: routes.py
src/api/time_provider/: AisenseApiProvider.py  GettimeApiProvider.py  HttpTimeProvider.py  LocalTimeProvider.py  TimeSyncContext.py  ai_sense_api_provider.py  context.py  get_time_api_provider.py  http_time_provider.py  local_time_provider.py  time_provider.py  time_provider_class.py  time_sync_context.py
src/api/time_provider/interface/: http_time_provider.py
src/api/time_provider/strategy/: ai_sense_api.py  ai_sense_api_provider.py  get_time_api.py  get_time_api_provider.py  local_time.py
src/api/time_provider/strategy/interface/: http_time_provider.py
src/app/: application.py
src/app/openmeteo/: fetch.py  gather.py  parameters.py  request_builder.py
src/app/openmeteo/places/: jarocin.py  place.py  place_dataclas.py  places.py
src/app/weather_forecast/: gather.py
src/backend/api/: app.py  routes.py
src/backend/api/client/: time_client.py
src/backend/api/models/: best_score_query_params.py  best_score_response.py  weather_calculation_response.py  weather_info_response.py  weather_query_params.py
src/backend/api/models/helpers/: best_score_calculator.py  weather_info_parse.py
src/backend/api/time_provider/: context.py  time_sync_context.py
src/backend/api/time_provider/strategy/: ai_sense_api.py  get_time_api.py  local_time.py
src/backend/api/time_provider/strategy/interface/: http_time_provider.py
src/backend/openmeteo/: gather.py  request_builder.py
src/backend/openmeteo/places/: places.py
src/ui/panel_ui/time_panel/: api.py  clock_widget.py  layout.py
src/ui/pyside_ui/: application.py  bootstrap.py
src/ui/pyside_ui/clock_widget/view/: tick_events.py
src/ui/pyside_ui/dialog_windows/: main_window.py
src/ui/react_ui/: app.py
src/ui/react_ui/frontend/src/: config.ts
src/ui/react_ui/frontend/src/components/clock/: clockRenderer.ts  useClockTime.ts
src/ui/shared/: helpers.py
src/ui/shared/client/: httpx_client.py
src/ui/shared/controller/: clock_controller.py  update_logic.py
src/ui/shared/model/strategy/: easing_movement.py  easing_strategy.py  pid_movement.py  pid_strategy.py  tick_movement.py  tick_strategy.py
tasks/: generate_diagrams.ps1
tests/: test_node_setup.py  test_pyside_setup.py
tests/api/: test_api.py
tests/app/: test_application.py
tests/app/weather_forecast/: test_openmeto.py  test_weather_forecast.py
tests/backend/api/: test_api.py  test_best_score.py
tests/backend/api/models/helpers/: test_best_score_calculator.py  test_weather_info_parse.py
tests/backend/api/openmeteo/: test_openmeto.py
tests/backend/api/openmeteo/places/: test_places.py
tests/backend/api/time_provider/: test_time_provider.py
tests/backend/openmeteo/: test_openmeto.py
tests/ui/panel_ui/: test_panel_ui.py
tests/ui/pyside_ui/: test_bootstrap.py
tests/ui/react_ui/: test_api.py  test_node_setup.py  test_react_ui.py
tests/ui/shared/: test_helpers.py
tests/ui/shared/controller/: test_controller.py
tests/ui/shared/model/: test_movement_strategies_pattern.py
