[project]
name = "python-standalone-gui-template"
version = "1.0.0"
description = "Simple template project for Python Standalone GUI Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.2",
    "panel>=1.8.5",
    "pyside6>=6.9.1",
    "pytest-asyncio>=1.3.0",
    "pytest-qt>=4.5.0",
    "qasync>=0.28.0",
    "requests-cache>=1.3.1",
    "respx>=0.22.0",
    "retry-requests>=2.0.0",
    "structlog>=25.5.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pandas-stubs>=3.0.0.260204",
    "pyinstaller>=6.14.1",
    "pip-audit>=2.9.0",
    "pydeps>=3.0.6",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
    "setuptools>=80.9.0",
    "vulture>=2.16",
    "import-linter>=2.11",
    "elasticsearch>=9.4.0",
    "python-json-logger>=4.1.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
preview = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
select = [
    # Pyflakes (F), Pycodestyle (E), isort, Pycodestyle warnings (W), Flake8-bugbear(B), Quotes style (Q)
    "F",
    "E",
    "I001",
    "W",
    "B",
    "Q",
    # flake8-bandit replacing bandit tool (S), unusued arguments (ARG), datetime zone (DTZ), flake8-logging (G)
    "S",
    "ARG",
    "DTZ",
    "G",
    # string concat style (ISC), no arg exception style (RSE), specific rule codes when ignoring (PGH004)
    "ISC",
    "RSE",
    "PGH004",
    # flake8 PIE (PIE), pytest (PT), Ruff specific, flake8 simplify (SIM), flake8 type checking imports (TCH)
    "PIE",
    "PT",
    "RUF",
    "SIM",
    "TCH",
    # exception handling (TRY), core upgrades/deprecations (UP), sys.version (YTT), FIXME comments
    "TRY",
    "UP",
    "YTT",
    "FIX001",
    # flake8 comprehensions (C4), performance (PERF), flake8-async, builtin shadowing (A), pep8 names (N)
    "C4",
    "PERF",
    "ASYNC",
    "A",
    "N",
    # Debugger calls, print calls, fstring vs static join (FLY)
    "T10",
    "T20",
    "FLY",
    # 'I' for import-related issues, 'F401' for unused imports
    "I",
    "F401",
    # if want type annotations on everything (ANN), docs (D)
    # "ANN", "D"
    "E301",
    "E302",
    "E303",
    "E305",
    "E306",
]
# S101: we don't optimize out sanity asserts.
# PT001 Checks for argument-free @pytest.fixture() decorators with or without parentheses, depending on the lint.flake8-pytest-style.fixture-parentheses setting
# TRY002 require custom exc.
# TRY003 long exc messages.
# UP040 type keyword was introduced in Python 3.12 by PEP 695 but isn't supported by mypy yet
ignore = ["S101", "PT001", "TRY002", "TRY003", "UP040"]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",
    "C",
    "C4",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "FLY",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
    "I001",
    "E301",
    "E302",
    "E303",
    "E305",
    "E306",
]
unfixable = ["B"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # Allow unused variables when underscore-prefixed.

[tool.ruff.lint.per-file-ignores]
# last checked EnvLoaderMixin + JsonSchemaMixin was having problems with X | Y annotations
"app/{config,data_types}.py" = ["UP007"]
"components/*.py" = ["UP007"]
# F401: ignore unused imports in `__init__.py` files
"__init__.py" = ["F401"]
# S311: (Standard pseudo-random generators are not suitable for cryptographic purposes)
# ARG001: unused args common for e.g. test fixtures
"tests/*" = ["S311", "ARG001", "ANN"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml --cov-report=term"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.importlinter]
root_package = "src"
include_external_packages = true





[[tool.importlinter.contracts]]
name = "Strict layered architecture"
type = "layers"

layers = [
    "src.ui",
    "src.shared",
    "src.backend",
    "src.helpers",
]





[[tool.importlinter.contracts]]
name = "Helpers must stay pure"
type = "forbidden"

source_modules = ["src.helpers"]
forbidden_modules = [
    "src.ui",
    "src.backend",
    "src.shared.client",
]





[[tool.importlinter.contracts]]
name = "Backend must never depend on UI"
type = "forbidden"

source_modules = ["src.backend"]
forbidden_modules = ["src.ui"]

[[tool.importlinter.contracts]]
name = "Backend API isolation"
type = "layers"

layers = [
    "src.backend.api.routes",
    "src.backend.api.time_provider",
    "src.backend.openmeteo",
]





[[tool.importlinter.contracts]]
name = "Shared model must be framework independent"
type = "forbidden"

source_modules = [
    "src.shared.model",
    "src.shared.controller",
]

forbidden_modules = [
    "PySide6",
    "panel",
    "fastapi",
    "uvicorn",
]

[[tool.importlinter.contracts]]
name = "Strategies must not know UI"
type = "forbidden"

source_modules = [
    "src.shared.model.strategy",
]

forbidden_modules = [
    "src.ui",
]





[[tool.importlinter.contracts]]
name = "UI frameworks isolation"
type = "independence"

modules = [
    "src.ui.pyside_ui",
    "src.ui.react_ui",
    "src.ui.panel_ui",
]

[[tool.importlinter.contracts]]
name = "React UI cannot import PySide"
type = "forbidden"

source_modules = ["src.ui.react_ui"]
forbidden_modules = ["src.ui.pyside_ui"]

[[tool.importlinter.contracts]]
name = "PySide UI cannot import React"
type = "forbidden"

source_modules = ["src.ui.pyside_ui"]
forbidden_modules = ["src.ui.react_ui"]





[[tool.importlinter.contracts]]
name = "Tests cannot import production entrypoints"
type = "forbidden"

source_modules = ["tests"]
forbidden_modules = [
    "src.main",
]





[[tool.importlinter.contracts]]
name = "Settings modules are isolated"
type = "independence"

modules = [
    "src.settings",
    "src.ui.panel_ui.settings",
    "src.ui.pyside_ui.settings",
]





[[tool.importlinter.contracts]]
name = "HTTP client isolation"
type = "forbidden"

source_modules = [
    "src.shared.client",
]

forbidden_modules = [
    "src.ui",
]





[[tool.importlinter.contracts]]
name = "Interfaces must not depend on implementations"
type = "forbidden"

source_modules = [
    "src.shared.model.strategy.interface",
    "src.backend.api.time_provider.strategy.interface",
]

forbidden_modules = [
    "src.shared.model.strategy",
    "src.backend.api.time_provider.strategy",
]





[[tool.importlinter.contracts]]
name = "Main entrypoint must remain thin"
type = "forbidden"

source_modules = ["src.main"]

forbidden_modules = [
    "src.ui.react_ui.frontend",
]





[[tool.importlinter.contracts]]
name = "OpenMeteo module isolation"
type = "forbidden"

source_modules = [
    "src.backend.openmeteo",
]

forbidden_modules = [
    "src.ui",
]





[[tool.importlinter.contracts]]
name = "Frontend assets isolation"
type = "forbidden"

source_modules = [
    "src.ui.react_ui.frontend",
]

forbidden_modules = [
    "src.backend",
    "src.helpers",
]





[[tool.importlinter.contracts]]
name = "Dialogs and widgets separation"
type = "independence"

modules = [
    "src.ui.pyside_ui.dialog_windows",
    "src.ui.pyside_ui.clock_widget",
]